# ubuntu-unity

./: CMakeLists.txt
UnityCore/: GLibDBusServer.cpp  GLibSource.h
data/: CMakeLists.txt
data/compiz/: CMakeLists.txt  unity.conf
debian/: changelog  control  gbp.conf  rules  unity.install
launcher/: DevicesSettingsImp.cpp  FavoriteStoreGSettings.cpp  FavoriteStorePrivate.h
lockscreen/: BackgroundSettings.cpp  BackgroundSettings.h  LockScreenAcceleratorController.cpp  LockScreenController.cpp  UserAuthenticator.h  UserAuthenticatorPam.cpp  UserAuthenticatorPam.h
services/: CMakeLists.txt
shortcuts/: ShortcutHint.cpp
tests/: test_launcher_hide_machine.cpp  test_launcher_hover_machine.cpp
tests/autopilot/unity/emulators/: X11.py  compiz.py  dash.py  hud.py  ibus.py  icons.py  launcher.py  panel.py  quicklist.py  screen.py  shortcut_hint.py  switcher.py  tooltip.py  unity.py  window_manager.py  workspace.py
tests/autopilot/unity/tests/: __init__.py  test_command_lens.py  test_dash.py  test_gnome_key_grabber.py  test_gobject_introspection.py  test_home_lens.py  test_hud.py  test_ibus.py  test_panel.py  test_quicklist.py  test_search.py  test_shopping_lens.py  test_shortcut_hint.py  test_showdesktop.py  test_spread.py  test_switcher.py  test_unity_logging.py  test_wm_keybindings.py
tests/autopilot/unity/tests/launcher/: test_capture.py  test_icon_behavior.py  test_keynav.py  test_reveal.py  test_scroll.py  test_shortcut.py  (+2 more)
tests/data/: external.gschema.xml
tools/: makebootchart.py  unity-introspection-visualiser.py
unity-shared/: IconLoader.h
(+1 files in other folders)
